re PR target/18582 (Internal compiler error with arrays of type V2DF)

PR target/18582
	* config/i386/i386.c (ix86_expand_unop_builtin): Force the target
	to be a register if do_load is true.

From-SVN: r102694